Deactivated ser akaroa tracing and changed snir estimation. Now estimates pulse power from peak voltage and divides by mean thermal noise power.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -159,7 +159,7 @@ sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 sim.node[0].nic.mac.ber.with-akaroa = false
 sim.node[0].nic.mac.ser.with-akaroa = false
 sim.node[0].nic.phy.sinr.with-akaroa = true
-sim.node[0].nic.phy.EbN0.with-akaroa = true
+sim.node[0].nic.phy.EbN0.with-akaroa = false
 
 [Config seg]
 extends = BERD
