Added channel cm1 for comparison with a higher SNR.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -152,7 +152,7 @@ sim.node[1].mobility.x = ${distance=1..15}#${distance=5..30 step 5, 40,50} #${di
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
 sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
