--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -125,6 +125,17 @@ sim.node[*].app.dstAddr = 0
 repeat = 1
 sim.node[0].app.nbPackets = 0
 
+[Config channelPlots]
+ description = "Sends one packet per channel and traces all points at reception."
+extends = BERD
+sim.node[1].app.payloadSize = ${packetSize=8} byte
+sim.node[1].mobility.x = ${distance=5} byte
+sim.node[1].app.nbPackets = ${nbPackets=1}
+sim.node[*].nic.mac.RSDecoder = true
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}-trace.xml") # sync always succeeds
+**.with-akaroa = false
+
 [Config BERDistance]
 description = "Evaluates the bit error rate as a function of distance"
 extends = BERD
