--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -172,6 +172,7 @@ sim.node[0].nic.mac.ber.with-akaroa = false
 sim.node[0].nic.mac.ser.with-akaroa = false
 sim.node[0].nic.phy.sinr.with-akaroa = true
 sim.node[0].nic.phy.EbN0.with-akaroa = true
+sim.node[0].nic.phy.noise.with-akaroa = true
 
 [Config seg]
 extends = BERD
