--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -160,11 +160,11 @@ sim.node[0].nic.phy.averagePower.with-akaroa = false
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
 extends = BERD
-sim.node[1].mobility.x = ${distance=1..15}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=100..130 step 2}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1}.xml")
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
 sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
@@ -173,6 +173,7 @@ sim.node[0].nic.mac.ser.with-akaroa = false
 sim.node[0].nic.phy.sinr.with-akaroa = true
 sim.node[0].nic.phy.EbN0.with-akaroa = true
 sim.node[0].nic.phy.noise.with-akaroa = true
+sim.node[0].nic.phy.pathloss.with-akaroa = true
 
 [Config seg]
 extends = BERD
