--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -141,11 +141,11 @@ sim.node[1].nic.phy.vector-recording = true
 description = "Evaluates the bit error rate as a function of distance"
 extends = BERD
 repeat = 1
-sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
-sim.node[1].mobility.x = ${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].app.payloadSize = ${packetSize=127} byte # ${packetSize=8,32,128} byte
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+sim.node[1].mobility.x = ${distance=1,10,50,100,150} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
 sim.node[0].stats.vector-recording = false
 sim.node[0].stats.**.with-akaroa = false
