Added pathloss tracking in BERDistance.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -157,6 +157,7 @@ sim.node[0].nic.mac.ser.with-akaroa = true
 sim.node[0].nic.phy.sinr.with-akaroa = true
 sim.node[0].nic.phy.averagePower.with-akaroa = false
 sim.node[0].nic.phy.Prx.with-akaroa = true
+sim.node[0].nic.phy.pathloss.with-akaroa = true
 
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
