Changed parameters to better match performance.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -141,9 +141,9 @@ sim.node[1].nic.phy.vector-recording = true
 description = "Evaluates the bit error rate as a function of distance"
 extends = BERD
 repeat = 1
-sim.node[1].app.payloadSize = ${packetSize=127} byte # ${packetSize=8,32,128} byte
+sim.node[1].app.payloadSize = ${packetSize=7, 31, 127} byte # ${packetSize=8,32,128} byte
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
-sim.node[1].mobility.x = ${distance=1,10,50,100,150} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=1..5 step 1, 7.5, 10, 15..30 step 5} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
@@ -158,6 +158,7 @@ sim.node[0].nic.phy.sinr.with-akaroa = true
 sim.node[0].nic.phy.averagePower.with-akaroa = false
 sim.node[0].nic.phy.Prx.with-akaroa = true
 sim.node[0].nic.phy.pathloss.with-akaroa = true
+sim.node[0].nic.phy.noise.with-akaroa = true
 
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
