Updated MAICircleN configuration.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -228,27 +228,25 @@ repeat = 10
 
 [Config MAICircle]
 description = "Evaluates the impact of multiple access interference on bit error rate with homogeneous interferers"
-sim.node[*].app.flood = true
 sim.node[0].app.nbPackets = 0
-sim.node[*].app.nbPackets = 100000
-sim.node[*].app.payloadSize = 8 byte
+sim.node[*].app.nbPackets = 100000000
 sim.node[*].app.dstAddr = 0
 
 [Config MAICircleN]
 description = "Evaluates the BER as a function of the number of concurrent transmissions N at equal distance of the receiver"
 extends = MAICircle
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
+sim.node[*].app.payloadSize = ${PacketSize=7,31} byte
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2}.xml")
 **.numHosts = ${NbNodes=2..10 step 1}
-# noshadowing
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
-# shadowing
-#sim.node[*].nic.phy.analogueModels = xmldoc("channels/shadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
-
-sim.node[*].nic.phy.decider = xmldoc("../widemac/receivers/${Receiver=3dBAlwaysSync}.xml")
+sim.node[*].app.flood = true
 #include topo.ini
 sim.node[0].stats.vector-recording = true
 sim.node[0].stats.**.with-akaroa = true
 sim.node[0].nic.mac.vector-recording = false
 sim.node[0].nic.mac.meanPacketBER.with-akaroa = false # deactivated because does not stabilize / converge fast enough
+sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
+sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 
 
 
