Now includes topo.ini

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -240,7 +240,7 @@ sim.node[*].app.payloadSize = ${PacketSize=7,31} byte
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm5}.xml")
 **.numHosts = ${NbNodes=2..10 step 1}
 sim.node[*].app.flood = true
-#include topo.ini
+include topo.ini
 sim.node[0].stats.vector-recording = true
 sim.node[0].stats.**.with-akaroa = true
 sim.node[0].nic.mac.vector-recording = false
