Added BER logging for MAICircleN configuration.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -247,9 +247,7 @@ sim.node[0].nic.mac.vector-recording = false
 sim.node[0].nic.mac.meanPacketBER.with-akaroa = false # deactivated because does not stabilize / converge fast enough
 sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
-
-
-
+sim.node[0].nic.mac.ber.with-akaroa = true
 
 [Config MAIUnif]
 extends = MAICircle
