Added configuration with poisson traffic instead of continuous interference.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -249,6 +249,42 @@ sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = false # converges much slower 
 sim.node[0].nic.mac.ber.with-akaroa = true
 
+[Config MAICircleNPoisson]
+description = "Evaluates the BER as a function of the number of concurrent transmissions N at equal distance of the receiver"
+extends = MAICircle
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dBsync}.xml")
+sim.node[*].app.payloadSize = ${PacketSize=31} byte
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,cm1}.xml")
+**.numHosts = ${NbNodes=2..10 step 1}
+sim.node[*].app.flood = false
+sim.node[*].app.trafficParam = ${Lambda=0.1,0.005}
+include topo.ini
+sim.node[0].stats.vector-recording = true
+sim.node[0].stats.**.with-akaroa = true
+sim.node[0].nic.mac.vector-recording = false
+sim.node[0].nic.mac.meanPacketBER.with-akaroa = false # deactivated because does not stabilize / converge fast enough
+sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
+sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = false # converges much slower 
+sim.node[0].nic.mac.ber.with-akaroa = true
+
+[Config MAIEPFL0]
+description ="MAI simulation reproducing the configuration of ICUWB09_Flury, with same power levels."
+extends = MAICircle
+sim.node[*].app.dstAddr = 0
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
+sim.node[*].app.payloadSize = ${PacketSize=7,31} byte
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm5}.xml")
+**.numHosts = ${NbNodes=2..5 step 1}
+sim.node[*].app.flood = true
+include topo.ini
+sim.node[0].stats.vector-recording = true
+sim.node[0].stats.**.with-akaroa = true
+sim.node[0].nic.mac.vector-recording = false
+sim.node[0].nic.mac.meanPacketBER.with-akaroa = false # deactivated because does not stabilize / converge fast enough
+sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
+sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = false # converges much slower 
+sim.node[0].nic.mac.ber.with-akaroa = true
+
 [Config MAIUnif]
 extends = MAICircle
 description = "Evaluates the impact of multiple access interference on bit error rate with heterogeneous interferers"
