Removed iteration variable for circle radius.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -258,7 +258,7 @@ sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassem
 **.numHosts = ${NbNodes=2..10 step 1}
 sim.node[*].app.flood = false
 sim.node[*].app.trafficParam = ${Lambda=0.1,0.005}
-include ${topo=topologies/circle_10_3meters.ini,topologies/circle_10_5meters.ini}
+include topologies/circle_10_3meters.ini
 sim.node[0].stats.vector-recording = true
 sim.node[0].stats.**.with-akaroa = true
 sim.node[0].nic.mac.vector-recording = false
