- renamed "HostState" from blackboard test to "TestHostState" - portet SimpleBattery from EnergyFramework 0.9 to MiXiM - portet deviceTests for SimpleBattery from EnergyFramework 0.9 for MiXiM (seem to pass but not 100% validated yet)
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@537 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MiXiM-orig</name>
+	<name>MiXiMorig</name>
 	<comment></comment>
 	<projects>
 	</projects>
