- extracted battery access from BaseModuled to a seperated sub class "BatteryAccess" from which most host modules derive - added enforced handling of host state changes into BaseModule. If the hosts state changes to something else than "ACTIVE" (e.g. "OFF", "SLEEP") every sub class of BaseModule has to handle this or has to explicitly set its "notAffectedByHostState" parameter otherwise an error is thrown. This assures that in a simulation where the host state can change only module which support this are used - moved code for "findHost" to class "FindModule" - set "publish" self messages from SimpleBattery to low priority to assure correct handling of events occuring at the same simulation time
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@542 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/tests/power/Nic80211Test/omnetpp.ini
+++ b/tests/power/Nic80211Test/omnetpp.ini
@@ -93,6 +93,7 @@ sim.host[*].appl.burstSize = 7
 ##############################################################################
 sim.host[*].net.headerLength = 32bit# in bits
 sim.host[*].net.debug = false
+sim.host[*].net.notAffectedByHostState = true
 
 ##############################################################################
 #       Parameters for ARP
@@ -120,6 +121,8 @@ sim.host[*].nic.mac.snr11Mbit = 5.68dB
 sim.host[*].nic.mac.rtsCtsThreshold = 0
 sim.host[*].nic.mac.neighborhoodCacheSize = 30
 sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100s
+
+sim.host[*].nic.mac.notAffectedByHostState = true
 
 ##############################################################################
 #       Parameters for the SnrEval                                           #
