- corrected outputname for examples - added headerlength parameter to BasePhyLayer - removed PHY_HEADER length from MacPkt in Mac80211 - updated expected outputs
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@546 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -164,4 +164,5 @@ sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
 **.phy.timeSleepToTX = 0s
 **.phy.initialRadioState = 0
 **.mobility.z = 0
+**.phy.headerLength = 192bit
 sim.host[*].nic.phy.useThermalNoise = true
