--- a/tests/power/Nic80211Test/omnetpp.ini
+++ b/tests/power/Nic80211Test/omnetpp.ini
@@ -132,7 +132,7 @@ sim.host[*].nic.mac.notAffectedByHostState = true
 sim.host[*].nic.phy.debug = true
 sim.host[*].nic.phy.coreDebug = true
 sim.host[*].nic.phy.publishRSSIAlways = 0
-sim.host[*].nic.phy.headerLength = 192
+sim.host[*].nic.phy.headerLength = 192bit
 sim.host[*].nic.phy.transmitterPower = 110.11# [mW]
 sim.host[*].nic.phy.carrierFrequency = 2.4E+9
 sim.host[*].nic.phy.thermalNoise = -110dBm
