--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -10,7 +10,7 @@ ned-path = ../../base;../../modules;../../examples;
 #rng-class = "cAkaroaRNG"
 #outputvectormanager-class = "cAkOutputVectorManager"
 #**.with-akaroa = false
-#**.vector-recording = false
+**.vector-recording = false
 
 
 cmdenv-express-mode = true
@@ -165,10 +165,17 @@ description = "Computes the BER as a function of Eb/N0 with the CM2 channel mode
 extends = BERD
 sim.node[1].mobility.x = ${distance=100..130 step 2}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
-sim.node[1].app.nbPackets = ${nbPackets=1000000}
+sim.node[1].app.nbPackets = ${nbPackets=1000}
+simtime-limit=20s
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
+sim.node[0].nic.mac.packetSuccessRate.enabled = true
+sim.node[0].nic.mac.packetSuccessRateNoRS.enabled = true
+sim.node[0].nic.mac.**.enabled = false
+sim.node[0].nic.phy.sinr.enabled = true
+sim.node[0].nic.phy.EbN0.enabled = true
+sim.node[0].nic.phy.*.enabled = false
 #sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 #sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 #sim.node[0].nic.mac.ber.with-akaroa = false
