--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -166,7 +166,7 @@ extends = BERD
 sim.node[1].mobility.x = ${distance=100..130 step 2}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.nbPackets = ${nbPackets=1000}
-simtime-limit=20s
+sim-time-limit=20s
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
