--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -150,6 +150,7 @@ sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync alw
 sim.node[0].stats.vector-recording = false
 #sim.node[0].stats.**.with-akaroa = false
 sim.node[0].nic.mac.vector-recording = true
+sim.node[0].nic.phy.vector-recording = true
 #sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 #sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 #sim.node[0].nic.mac.ber.with-akaroa = true
@@ -170,6 +171,8 @@ sim-time-limit=20s
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
+sim.node[0].nic.mac.vector-recording = true
+sim.node[0].nic.phy.vector-recording = true
 sim.node[0].nic.mac.packetSuccessRate.enabled = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.enabled = true
 sim.node[0].nic.mac.**.enabled = false
