Fixed vector output and increased number of packets.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -166,13 +166,12 @@ description = "Computes the BER as a function of Eb/N0 with the CM2 channel mode
 extends = BERD
 sim.node[1].mobility.x = ${distance=100..130 step 2}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
-sim.node[1].app.nbPackets = ${nbPackets=1000}
+sim.node[1].app.nbPackets = ${nbPackets=10000}
 sim-time-limit=20s
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
-sim.node[0].nic.mac.vector-recording = true
-sim.node[0].nic.phy.vector-recording = true
+sim.node[0].nic.**.vector-recording = true
 sim.node[0].nic.mac.packetSuccessRate.enabled = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.enabled = true
 sim.node[0].nic.mac.**.enabled = false
