--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -171,13 +171,12 @@ sim-time-limit=20s
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
-#sim.node[0].nic.**.vector-recording = true
-sim.node[0].nic.mac.packetSuccessRate.enabled = yes
-sim.node[0].nic.mac.packetSuccessRateNoRS.enabled = yes
-sim.node[0].nic.phy.sinr.enabled = yes
-sim.node[0].nic.phy.EbN0.enabled = yes
-sim.node[0].nic.mac.**.enabled = no
-sim.node[0].nic.phy.**.enabled = no
+sim.node[0].nic.mac.ber.vector-recording = yes
+sim.node[0].nic.mac.packetSuccessRate.vector-recording = yes
+sim.node[0].nic.mac.packetSuccessRateNoRS.vector-recording = yes
+sim.node[0].nic.phy.sinr.vector-recording = yes
+sim.node[0].nic.phy.EbN0.vector-recording = yes
+**.vector-recording = false
 #sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 #sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 #sim.node[0].nic.mac.ber.with-akaroa = false
