Changed distances to obtain more interesting EbN0 values.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -164,7 +164,7 @@ sim.node[0].nic.phy.vector-recording = true
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
 extends = BERD
-sim.node[1].mobility.x = ${distance=100..130 step 2}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=1..10 step 1, 15..50 step 5}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.nbPackets = ${nbPackets=10000}
 sim-time-limit=20s
