Added flood flag to accelerate packet sending.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -166,6 +166,7 @@ description = "Computes the BER as a function of Eb/N0 with the CM2 channel mode
 extends = BERD
 sim.node[1].mobility.x = ${distance=1..10 step 1, 15..50 step 5}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
+sim.node[1].app.flood = true
 sim.node[1].app.nbPackets = ${nbPackets=10000}
 sim-time-limit=20s
 sim.node[*].nic.mac.RSDecoder = true
