- fixed memory leak when propagation delay is used - fixed memory leak in CSMAMac examples SimpleNetwLayer
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@551 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -131,7 +131,7 @@ phySim.node[0].net.isSwitch = true
 phySim.node[4].net.isSwitch = true
 phySim.node[*].nic.phy.coreDebug = true
 phySim.numHosts = 6
-
+sim-time-limit = 50s
 
 [Config WithoutPropDelay]
 phySim.node[*].nic.phy.usePropagationDelay = false
@@ -139,3 +139,4 @@ phySim.node[0].net.isSwitch = true
 phySim.node[4].net.isSwitch = true
 phySim.node[*].nic.phy.coreDebug = true
 phySim.numHosts = 6
+sim-time-limit = 50s
