--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -172,7 +172,7 @@ sim-time-limit=30s # for 10000 packets
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
-sim.node[0].nic.mac.ber.vector-recording = yes
+sim.node[0].nic.mac.packetsBER.vector-recording = yes
 sim.node[0].nic.mac.successNoRS.vector-recording = yes
 sim.node[0].nic.mac.success.vector-recording = yes
 sim.node[0].nic.mac.packetSuccessRate.vector-recording = yes
