--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -167,8 +167,8 @@ extends = BERD
 sim.node[1].mobility.x = ${distance=1..10 step 1, 15..50 step 5}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.flood = true
-sim.node[1].app.nbPackets = ${nbPackets=10000}
-sim-time-limit=30s # for 10000 packets
+sim.node[1].app.nbPackets = ${nbPackets=1000}
+sim-time-limit=10s # 30s for 10000 packets
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
