Reduced the number of packets and increased the number of distances.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -164,11 +164,11 @@ sim.node[0].nic.phy.vector-recording = true
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
 extends = BERD
-sim.node[1].mobility.x = ${distance=1..10 step 1, 15..50 step 5}
+sim.node[1].mobility.x = ${distance=1..2 step 0.2, 3..10 step 1, 15..50 step 5, 60..100 step 10}
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.flood = true
-sim.node[1].app.nbPackets = ${nbPackets=3000}
-sim-time-limit=30s # 30s for 10000 packets
+sim.node[1].app.nbPackets = ${nbPackets=100}
+sim-time-limit=10s # 30s for 10000 packets
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2,cm1,ghassemzadeh-nlos,ghassemzadeh-los}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
