- first port of 802.15.4 - added example for 802.15.4

--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -24,11 +24,13 @@ phySim.world.use2D = false
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
+phySim.connectionManager.debug = false
 phySim.connectionManager.sendDirect = false
-phySim.connectionManager.pMax = 100mW
-phySim.connectionManager.sat = -91dBm
-phySim.connectionManager.alpha = 3.0
-phySim.connectionManager.carrierFrequency = 2.412e+9Hz
+phySim.connectionManager.radioRange = 92
+phySim.connectionManager.pMax = 2
+phySim.connectionManager.sat = -110
+phySim.connectionManager.alpha = 2.5
+phySim.connectionManager.carrierFrequency = 2.412e+9
 
 ##########################################################
 #             Host specific parameters                   #
@@ -52,14 +54,14 @@ phySim.node[*].nic.phy.timeTXToSleep = 0.000032s
 phySim.node[*].nic.phy.timeSleepToRX = 0.000102s
 phySim.node[*].nic.phy.timeSleepToTX = 0.000203s
 
-phySim.node[*].nic.phy.sensitivity = -89dBm
+phySim.node[*].nic.phy.sensitivity = -83dBm
 phySim.node[*].nic.phy.maxTXPower = 100.0mW
 
 phySim.node[*].nic.phy.initialRadioState = 0
 
 ################ MAC layer parameters ####################
 phySim.node[*].nic.mac.queueLength = 5
-phySim.node[*].nic.mac.headerLength = 24
+phySim.node[*].nic.mac.headerLength = 24bit
 phySim.node[*].nic.mac.slotDuration = 0.002s
 phySim.node[*].nic.mac.difs = 0.0005s
 phySim.node[*].nic.mac.maxTxAttempts = 14
@@ -99,6 +101,10 @@ phySim.node[5].mobility.x = 50
 phySim.node[5].mobility.y = 400
 phySim.node[5].mobility.z = 100
 
+phySim.node[*].mobility.x = 0
+phySim.node[*].mobility.y = 0
+phySim.node[*].mobility.z = 0
+
 phySim.node[0].net.ip = 0
 phySim.node[0].nic.id = 0
 
@@ -112,6 +118,8 @@ phySim.node[4].net.ip = 4
 phySim.node[4].nic.id = 4
 phySim.node[5].net.ip = 5
 phySim.node[5].nic.id = 5
+phySim.node[*].net.ip = 0
+phySim.node[*].nic.id = 0
 phySim.node[*].nic.phy.useThermalNoise = true
 
 
