--- a/examples/baseNetwork/omnetpp.ini
+++ b/examples/baseNetwork/omnetpp.ini
@@ -54,7 +54,7 @@ baseSim.node[*].nic.phy.initialRadioState = 0
 
 ################ MAC layer parameters ####################
 baseSim.node[*].nic.mac.queueLength = 5
-baseSim.node[*].nic.mac.headerLength = 24
+baseSim.node[*].nic.mac.headerLength = 24bit
 baseSim.node[*].nic.mac.slotDuration = 0.04s
 baseSim.node[*].nic.mac.difs = 0.0005s
 baseSim.node[*].nic.mac.maxTxAttempts = 14
@@ -64,9 +64,6 @@ baseSim.node[*].nic.mac.contentionWindow = 20
 baseSim.node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ NETW layer parameters ####################
-baseSim.node[*].net.isSwitch = false
-baseSim.node[*].net.maxTtl = 3
-baseSim.node[*].net.boredTime = 0.5
 
 ################ Mobility parameters #####################
 
