- extracted BlackBoard from BaseUtility into own module which BaseUtility extends from - made BaseWorldUtility subclass BlackBoard to provide global black board functionality (not yet tested) - fixed unit inside Mac80211 examples omnetpp.ini

--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -126,7 +126,7 @@ sim.host[*].net.debug = false
 ##############################################################################
 
 # debug switch
-sim.host[*].nic.mac.headerLength = 272
+sim.host[*].nic.mac.headerLength = 272 bit
 sim.host[*].nic.mac.queueLength = 14
 sim.host[*].nic.mac.bitrate = 2E+6bps# in bits/second
 sim.host[*].nic.mac.defaultChannel = 0
