- first test configuration for send and receive rate

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -5,7 +5,7 @@ cmdenv-module-messages = true
 ned-path = ../../../base;../../../modules;../../../examples;
 network = csmaTestSim
 
-sim-time-limit = 100s
+sim-time-limit = 500s
 
 
 ##########################################################
@@ -13,8 +13,8 @@ sim-time-limit = 100s
 ##########################################################
 tkenv-default-config = 
 csmaTestSim.**.coreDebug = false
-csmaTestSim.playgroundSizeX = 500m
-csmaTestSim.playgroundSizeY = 500m
+csmaTestSim.playgroundSizeX = 100m
+csmaTestSim.playgroundSizeY = 100m
 csmaTestSim.playgroundSizeZ = 300m
 csmaTestSim.numHosts = 3
 
@@ -111,11 +111,18 @@ csmaTestSim.node[*].mobility.updateInterval = 0.5s
 #phySim.node[*].net.notAffectedByHostState = true
 
 csmaTestSim.node[*].appl.debug = false
-csmaTestSim.node[*].appl.packetLength = 100bit
-**.appl.packetTime = 0.005s
+csmaTestSim.node[*].appl.packetLength = 25000bit
+**.appl.packetTime = 0.1s
 **.appl.packetsPerPacketTime = 0.15
 
 
 
 [Config Test1-sendRate]
+csmaTestSim.playgroundSizeX = 10m
+csmaTestSim.playgroundSizeY = 10m
+csmaTestSim.numHosts = 10
+csmaTestSim.node[*].mobility.x = -1
+csmaTestSim.node[*].mobility.y = -1
+csmaTestSim.node[*].mobility.z = -1
+**.appl.packetsPerPacketTime = ${0.01, 0.03, 0.05, 0.07, 0.09, 0.11, 0.25, 0.5, 1}
 
