- added test configuration for queue test and csma channel usage characteristics

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -5,7 +5,7 @@ cmdenv-module-messages = true
 ned-path = ../../../base;../../../modules;../../../examples;
 network = csmaTestSim
 
-sim-time-limit = 500s
+sim-time-limit = 100s
 
 
 ##########################################################
@@ -75,10 +75,11 @@ csmaTestSim.node[*].nic.mac.bitrate = 250000bps
 #phySim.node[*].nic.mac.contentionWindow = 20
 csmaTestSim.node[*].nic.mac.txPower = 1mW  # [mW]
 csmaTestSim.node[*].nic.mac.notAffectedByHostState = true
-csmaTestSim.node[*].nic.mac.macMinBE = 3
-csmaTestSim.node[*].nic.mac.macMaxBE = 5
-csmaTestSim.node[*].nic.mac.macMaxCSMABackoffs = 4
+csmaTestSim.node[*].nic.mac.macMinBE = 1
+csmaTestSim.node[*].nic.mac.macMaxBE = 6
+csmaTestSim.node[*].nic.mac.macMaxCSMABackoffs = 20
 csmaTestSim.node[*].nic.mac.macAckWaitDuration = 0.000864s
+csmaTestSim.node[*].nic.mac.aUnitBackoffPeriod = 0.02s
 
 ################ NETW layer parameters ####################
 
@@ -111,7 +112,7 @@ csmaTestSim.node[*].mobility.updateInterval = 0.5s
 #phySim.node[*].net.notAffectedByHostState = true
 
 csmaTestSim.node[*].appl.debug = false
-csmaTestSim.node[*].appl.packetLength = 25000bit
+csmaTestSim.node[*].appl.packetLength = 24880bit
 **.appl.packetTime = 0.1s
 **.appl.packetsPerPacketTime = 0.15
 
@@ -120,9 +121,31 @@ csmaTestSim.node[*].appl.packetLength = 25000bit
 [Config Test1-sendRate]
 csmaTestSim.playgroundSizeX = 10m
 csmaTestSim.playgroundSizeY = 10m
+csmaTestSim.numHosts = ${2..20 step 1}
+csmaTestSim.node[*].mobility.x = -1
+csmaTestSim.node[*].mobility.y = -1
+csmaTestSim.node[*].mobility.z = -1
+**.appl.packetsPerPacketTime = 0.1
+
+[Config Test2-sendRate]
+csmaTestSim.playgroundSizeX = 10m
+csmaTestSim.playgroundSizeY = 10m
 csmaTestSim.numHosts = 10
 csmaTestSim.node[*].mobility.x = -1
 csmaTestSim.node[*].mobility.y = -1
 csmaTestSim.node[*].mobility.z = -1
-**.appl.packetsPerPacketTime = ${0.01, 0.03, 0.05, 0.07, 0.09, 0.11, 0.25, 0.5, 1}
+**.appl.packetsPerPacketTime = ${0.02..0.2 step 0.02}
+**.appl.burstSize = 1
+**.mac.queueLength = 100
 
+[Config Test3-sendRate-bursted]
+extends = Test2-sendRate
+**.appl.burstSize = 3
+
+[Config Test4-sendRate-bursted-unqueued]
+extends = Test3-sendRate-bursted
+**.mac.queueLength = 0
+
+[Config Test5-sendRate-unqueued]
+extends = Test2-sendRate
+**.mac.queueLength = 0
