- added test configurations for mac Acks and hidden station problem to mac-test

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -28,9 +28,9 @@ csmaTestSim.world.use2D = true
 #			         channel parameters                  #
 ##########################################################
 csmaTestSim.connectionManager.sendDirect = false
-csmaTestSim.connectionManager.pMax = 110.11mW
-csmaTestSim.connectionManager.sat = -120dBm
-csmaTestSim.connectionManager.alpha = 2
+csmaTestSim.connectionManager.pMax = 1.1mW
+csmaTestSim.connectionManager.sat = -100dBm
+csmaTestSim.connectionManager.alpha = 2.5
 csmaTestSim.connectionManager.carrierFrequency = 2.4E+9Hz
 
 ##########################################################
@@ -55,8 +55,8 @@ csmaTestSim.node[*].nic.phy.timeTXToSleep = 0s
 csmaTestSim.node[*].nic.phy.timeSleepToRX = 0.001792s
 csmaTestSim.node[*].nic.phy.timeSleepToTX = 0.001792s
 
-csmaTestSim.node[*].nic.phy.sensitivity = -89dBm
-csmaTestSim.node[*].nic.phy.maxTXPower = 100.0mW
+csmaTestSim.node[*].nic.phy.sensitivity = -100dBm
+csmaTestSim.node[*].nic.phy.maxTXPower = 1.1mW
 
 csmaTestSim.node[*].nic.phy.initialRadioState = 0
 
@@ -105,6 +105,8 @@ csmaTestSim.node[2].mobility.z = 100
 csmaTestSim.node[*].mobility.debug = false
 csmaTestSim.node[*].mobility.speed = 0
 csmaTestSim.node[*].mobility.updateInterval = 0.5s
+csmaTestSim.node[*].mobility.angle = 0
+csmaTestSim.node[*].mobility.acceleration = 0
 
 #phySim.node[*].net.debug = false
 #phySim.node[*].net.stats = false
@@ -149,3 +151,41 @@ extends = Test3-sendRate-bursted
 [Config Test5-sendRate-unqueued]
 extends = Test2-sendRate
 **.mac.queueLength = 0
+
+[Config Test6-Acks]
+csmaTestSim.playgroundSizeX = 500m
+csmaTestSim.playgroundSizeY = 500m
+csmaTestSim.numHosts = 2
+csmaTestSim.node[0].mobility.x = 250
+csmaTestSim.node[0].mobility.y = 250
+csmaTestSim.node[1].mobility.x = 400
+csmaTestSim.node[1].mobility.y = 400
+csmaTestSim.node[1].mobility.angle = 225deg
+csmaTestSim.node[1].mobility.speed = 1.5mps
+
+csmaTestSim.node[0].appl.burstSize = 0
+csmaTestSim.node[1].appl.burstSize = 1
+csmaTestSim.node[1].appl.destination = 10
+**.appl.packetsPerPacketTime = 0.5
+
+csmaTestSim.node[*].nic.phy.coreDebug = true
+
+csmaTestSim.world.recordVectors = true
+
+csmaTestSim.node[*].nic.phy.thermalNoise = -110dBm
+
+[Config Test7-Acks-BC]
+extends = Test6-Acks
+csmaTestSim.node[1].appl.destination = -1
+
+[Config Test8-Hidden-Station]
+extends = Test6-Acks
+csmaTestSim.numHosts = 3
+**.appl.packetsPerPacketTime = 0.25
+csmaTestSim.node[2].mobility.x = 100
+csmaTestSim.node[2].mobility.y = 100
+csmaTestSim.node[2].mobility.angle = 45deg
+csmaTestSim.node[2].mobility.speed = 1.5mps
+csmaTestSim.node[2].appl.burstSize = 1
+csmaTestSim.node[2].appl.destination = 11
+csmaTestSim.node[1].appl.destination = 11
