- added backoff test configuration to csma tests

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -2,7 +2,7 @@
 cmdenv-event-banners = true
 cmdenv-module-messages = true
 
-ned-path = ../../../base;../../../modules;../../../examples;
+ned-path = ../../../base;../../../modules;../../../examples;../..;
 network = csmaTestSim
 
 sim-time-limit = 100s
@@ -189,3 +189,19 @@ csmaTestSim.node[2].mobility.speed = 1.5mps
 csmaTestSim.node[2].appl.burstSize = 1
 csmaTestSim.node[2].appl.destination = 11
 csmaTestSim.node[1].appl.destination = 11
+
+[Config Test9-backoffs]
+sim-time-limit = ${N}s
+csmaTestSim.playgroundSizeX = 10m
+csmaTestSim.playgroundSizeY = 10m
+csmaTestSim.numHosts = ${N=2,4,8,16,32,64,128,256}
+csmaTestSim.node[*].mobility.x = -1
+csmaTestSim.node[*].mobility.y = -1
+csmaTestSim.node[*].mobility.z = -1
+**.appl.packetsPerPacketTime = 1/${N}
+csmaTestSim.node[*].nic.mac.macMinBE = 1
+csmaTestSim.node[*].nic.mac.macMaxBE = 8
+csmaTestSim.node[*].nic.mac.macMaxCSMABackoffs = 20
+csmaTestSim.node[*].nic.mac.aUnitBackoffPeriod = 0.1s
+csmaTestSim.connectionManager.sendDirect = true
+**.appl.burstSize = 2
