- added anf-file for usage tests for csma

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -118,6 +118,7 @@ csmaTestSim.node[*].appl.packetLength = 24880bit
 **.appl.packetTime = 0.1s
 **.appl.packetsPerPacketTime = 0.15
 
+csmaTestSim.world.bitrate = 250000
 
 
 [Config Test1-numHosts]
@@ -136,7 +137,7 @@ csmaTestSim.numHosts = 10
 csmaTestSim.node[*].mobility.x = -1
 csmaTestSim.node[*].mobility.y = -1
 csmaTestSim.node[*].mobility.z = -1
-**.appl.packetsPerPacketTime = ${0.02..0.2 step 0.02}
+**.appl.packetsPerPacketTime = ${0.02..0.2 step 0.01}
 **.appl.burstSize = 1
 **.mac.queueLength = 100
 
