- added 'recordScalar' to DeciderToPhyInterface and implemented it in BasePhyLayer (foreward) - added empty finish()-method to Decider and overloaded it in Decider802154Narrow to do statistics - overloaded finish() in BasePhyLayer to call finish() in Decider

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -120,7 +120,7 @@ csmaTestSim.node[*].appl.packetLength = 24880bit
 
 
 
-[Config Test1-sendRate]
+[Config Test1-numHosts]
 csmaTestSim.playgroundSizeX = 10m
 csmaTestSim.playgroundSizeY = 10m
 csmaTestSim.numHosts = ${2..20 step 1}
