Added MAI scenario from Flury07.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -277,6 +277,33 @@ sim.node[0].nic.mac.vector-recording = false
 #sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = false # converges much slower 
 #sim.node[0].nic.mac.ber.with-akaroa = true
 
+[Config flury07]
+description="Reproduction of MAI scenario A from Flury et al., ICUWB09"
+**.numHosts = ${NbNodes=3}
+repeat = 1
+sim.node[0].mobility.x = 250 # middle of playground
+sim.node[1].mobility.x = 250 - ${dist=1..100}
+sim.node[2].mobility.x = 250 + ${dist}
+sim.node[*].app.dstAddr = 0
+sim.node[0].app.nbPackets = 0
+sim.node[1].mobility.x = ${distance=1..4 step 0.2, 4..10 step 1, 15..50 step 1, 60..200 step 5}
+sim.node[0].app.nbPackets = 0
+sim.node[1].app.payloadSize = ${packetSize=127} byte
+sim.node[1].app.flood = false
+sim.node[1].app.nbPackets = ${nbPackets=10000}
+sim.node[*].app.trafficParam = ${rate=0.1,0.005} s
+sim-time-limit=30s # 30s for 10000 packets
+sim.node[*].nic.mac.RSDecoder = true
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm1}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB,3dBseg}.xml") 
+sim.node[0].nic.mac.packetsBER.vector-recording = yes
+sim.node[0].nic.mac.successNoRS.vector-recording = yes
+sim.node[0].nic.mac.success.vector-recording = yes
+sim.node[0].nic.mac.packetSuccessRate.vector-recording = yes
+sim.node[0].nic.mac.packetSuccessRateNoRS.vector-recording = yes
+**.vector-recording = false
+
+
 [Config MAIEPFL0]
 description ="MAI simulation reproducing the configuration of ICUWB09_Flury, with same power levels."
 extends = MAICircle
