--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -282,17 +282,16 @@ description="Reproduction of MAI scenario A from Flury et al., ICUWB09"
 **.numHosts = ${NbNodes=3}
 repeat = 1
 sim.node[0].mobility.x = 250 # middle of playground
-sim.node[1].mobility.x = 250 - ${dist=1..100}
+sim.node[1].mobility.x = 250 - ${dist=1..10 step 1, 15..50 step 5}
 sim.node[2].mobility.x = 250 + ${dist}
 sim.node[*].app.dstAddr = 0
 sim.node[0].app.nbPackets = 0
-sim.node[1].mobility.x = ${distance=1..4 step 0.2, 4..10 step 1, 15..50 step 1, 60..200 step 5}
 sim.node[0].app.nbPackets = 0
 sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.flood = false
-sim.node[1].app.nbPackets = ${nbPackets=10000}
+sim.node[1].app.nbPackets = ${nbPackets=1000}
 sim.node[*].app.trafficParam = ${rate=0.1,0.005} s
-sim-time-limit=30s # 30s for 10000 packets
+sim-time-limit=1000s # so we have 1 second per packet
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm1}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB,3dBseg}.xml") 
