--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -282,19 +282,18 @@ description="Reproduction of MAI scenario A from Flury et al., ICUWB09"
 **.numHosts = ${NbNodes=3}
 repeat = 1
 sim.node[0].mobility.x = 250 # middle of playground
-sim.node[1].mobility.x = 250 - ${dist=1..10 step 1, 15..50 step 5}
+sim.node[1].mobility.x = 250 - ${dist=1..10 step 2}
 sim.node[2].mobility.x = 250 + ${dist}
 sim.node[*].app.dstAddr = 0
 sim.node[0].app.nbPackets = 0
-sim.node[0].app.nbPackets = 0
-sim.node[1].app.payloadSize = ${packetSize=127} byte
-sim.node[1].app.flood = false
-sim.node[1].app.nbPackets = ${nbPackets=1000}
-sim.node[*].app.trafficParam = ${rate=0.1,0.005} s
+sim.node[*].app.payloadSize = ${packetSize=127} byte
+sim.node[*].app.flood = false
+sim.node[*].app.nbPackets = ${nbPackets=100}
+sim.node[*].app.trafficParam = ${rate=0.1,0.005} 
 sim-time-limit=1000s # so we have 1 second per packet
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm1}.xml")
-sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB,3dBseg}.xml") 
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") 
 sim.node[0].nic.mac.packetsBER.vector-recording = yes
 sim.node[0].nic.mac.successNoRS.vector-recording = yes
 sim.node[0].nic.mac.success.vector-recording = yes
