- added run scripts for tests - clean up of test setup and analysis files

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -1,7 +1,9 @@
 [General]
+cmdenv-config-name = 
 cmdenv-event-banners = true
 cmdenv-module-messages = true
 
+cmdenv-runs-to-execute = 
 ned-path = ../../../base;../../../modules;../../../examples;../..;
 network = csmaTestSim
 
@@ -121,7 +123,8 @@ csmaTestSim.node[*].appl.packetLength = 24880bit
 csmaTestSim.world.bitrate = 250000
 
 
-[Config Test1-numHosts]
+[Config Test1-A]
+description = "increasing number of hosts, unbursted, with queue"
 csmaTestSim.playgroundSizeX = 10m
 csmaTestSim.playgroundSizeY = 10m
 csmaTestSim.numHosts = ${2..20 step 1}
@@ -130,7 +133,8 @@ csmaTestSim.node[*].mobility.y = -1
 csmaTestSim.node[*].mobility.z = -1
 **.appl.packetsPerPacketTime = 0.1
 
-[Config Test2-sendRate]
+[Config Test1-B]
+description = "increasing send rate per host, unbursted, with queue"
 csmaTestSim.playgroundSizeX = 10m
 csmaTestSim.playgroundSizeY = 10m
 csmaTestSim.numHosts = 10
@@ -141,19 +145,23 @@ csmaTestSim.node[*].mobility.z = -1
 **.appl.burstSize = 1
 **.mac.queueLength = 100
 
-[Config Test3-sendRate-bursted]
-extends = Test2-sendRate
+[Config Test1-C]
+extends = Test1-B
+description = "increasing send rate per host, bursted, with queue"
 **.appl.burstSize = 3
 
-[Config Test4-sendRate-bursted-unqueued]
-extends = Test3-sendRate-bursted
+[Config Test1-D]
+extends = Test1-C
+description = "increasing send rate per host, bursted, without queue"
 **.mac.queueLength = 0
 
-[Config Test5-sendRate-unqueued]
-extends = Test2-sendRate
+[Config Test1-E]
+extends = Test1-B
+description = "increasing send rate per host, unbursted, without queue"
 **.mac.queueLength = 0
 
-[Config Test6-Acks]
+[Config Test2-A]
+description = "one sending host moving towards sink, with mac-acks"
 csmaTestSim.playgroundSizeX = 500m
 csmaTestSim.playgroundSizeY = 500m
 csmaTestSim.numHosts = 2
@@ -175,12 +183,14 @@ csmaTestSim.world.recordVectors = true
 
 csmaTestSim.node[*].nic.phy.thermalNoise = -110dBm
 
-[Config Test7-Acks-BC]
-extends = Test6-Acks
+[Config Test2-B]
+extends = Test2-A
+description = "one sending host moving towards sink, without mac-acks"
 csmaTestSim.node[1].appl.destination = -1
 
-[Config Test8-Hidden-Station]
-extends = Test6-Acks
+[Config Test2-C]
+extends = Test2-A
+description = "two sending host moving towards sink, hidden station config"
 csmaTestSim.numHosts = 3
 **.appl.packetsPerPacketTime = 0.25
 csmaTestSim.node[2].mobility.x = 100
@@ -191,15 +201,16 @@ csmaTestSim.node[2].appl.burstSize = 1
 csmaTestSim.node[2].appl.destination = 11
 csmaTestSim.node[1].appl.destination = 11
 
-[Config Test9-backoffs]
-sim-time-limit = ${N}s
+[Config Test3]
+description = "quadratic increasing number of hosts results in linear increase of backoffs"
+sim-time-limit = ${numHosts}s
 csmaTestSim.playgroundSizeX = 10m
 csmaTestSim.playgroundSizeY = 10m
-csmaTestSim.numHosts = ${N=2,4,8,16,32,64,128,256}
+csmaTestSim.numHosts = ${numHosts=2,4,8,16,32,64,128,256}
 csmaTestSim.node[*].mobility.x = -1
 csmaTestSim.node[*].mobility.y = -1
 csmaTestSim.node[*].mobility.z = -1
-**.appl.packetsPerPacketTime = 1/${N}
+**.appl.packetsPerPacketTime = 1/${numHosts}
 csmaTestSim.node[*].nic.mac.macMinBE = 1
 csmaTestSim.node[*].nic.mac.macMaxBE = 8
 csmaTestSim.node[*].nic.mac.macMaxCSMABackoffs = 20
