- reworked acknowledgement tests

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -162,41 +162,35 @@ description = "increasing send rate per host, unbursted, without queue"
 
 [Config Test2-A]
 description = "one sending host moving towards sink, with mac-acks"
+sim-time-limit = 300s
 csmaTestSim.playgroundSizeX = 500m
 csmaTestSim.playgroundSizeY = 500m
 csmaTestSim.numHosts = 2
 csmaTestSim.node[0].mobility.x = 250
 csmaTestSim.node[0].mobility.y = 250
-csmaTestSim.node[1].mobility.x = 400
-csmaTestSim.node[1].mobility.y = 400
-csmaTestSim.node[1].mobility.angle = 225deg
-csmaTestSim.node[1].mobility.speed = 1.5mps
+csmaTestSim.node[1].mobility.x = 250 - ${dist=40..220 step 5}#${dist=40..160 step 40, 180..220 step 2, 230,240}
+csmaTestSim.node[1].mobility.y = 250
 
 csmaTestSim.node[0].appl.burstSize = 0
 csmaTestSim.node[1].appl.burstSize = 1
 csmaTestSim.node[1].appl.destination = 10
-**.appl.packetsPerPacketTime = 0.5
+**.appl.packetsPerPacketTime = 0.25
 
-csmaTestSim.node[*].nic.phy.coreDebug = true
-
-csmaTestSim.world.recordVectors = true
-
-csmaTestSim.node[*].nic.phy.thermalNoise = -110dBm
+csmaTestSim.world.bcTraffic = false
 
 [Config Test2-B]
 extends = Test2-A
 description = "one sending host moving towards sink, without mac-acks"
 csmaTestSim.node[1].appl.destination = -1
+csmaTestSim.world.bcTraffic = true
 
 [Config Test2-C]
 extends = Test2-A
 description = "two sending host moving towards sink, hidden station config"
 csmaTestSim.numHosts = 3
-**.appl.packetsPerPacketTime = 0.25
-csmaTestSim.node[2].mobility.x = 100
-csmaTestSim.node[2].mobility.y = 100
-csmaTestSim.node[2].mobility.angle = 45deg
-csmaTestSim.node[2].mobility.speed = 1.5mps
+**.appl.packetsPerPacketTime = 0.125
+csmaTestSim.node[2].mobility.x = 380
+csmaTestSim.node[2].mobility.y = 250
 csmaTestSim.node[2].appl.burstSize = 1
 csmaTestSim.node[2].appl.destination = 11
 csmaTestSim.node[1].appl.destination = 11
